--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-hot-toast": "^2.4.0",
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.10.0",
+    "react-toastify": "^9.1.2",
     "recoil": "^0.7.7",
     "tailwindcss": "3.3.1",
     "typescript": "5.0.4"
