--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "autoprefixer": "10.4.14",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
+    "form-data": "^4.0.0",
     "fs": "^0.0.1-security",
     "next": "13.3.0",
     "postcss": "8.4.23",
@@ -25,6 +26,8 @@
     "react-hot-toast": "^2.4.0",
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.10.0",
+    "react-spinners": "^0.13.8",
+    "react-spinners-css": "^2.0.1",
     "react-toastify": "^9.1.2",
     "recoil": "^0.7.7",
     "tailwindcss": "3.3.1",
