--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "eslint-config-next": "13.3.0",
     "form-data": "^4.0.0",
     "fs": "^0.0.1-security",
+    "luxon": "^3.3.0",
     "next": "13.3.0",
     "postcss": "8.4.23",
     "react": "18.2.0",
@@ -37,6 +38,7 @@
     "@types/jsonwebtoken": "^9.0.1",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
-    "tailwindcss": "^3.2.4"
+    "tailwindcss": "^3.2.4",
+    "tailwindcss-animate": "^1.0.5"
   }
 }
