--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "luxon": "^3.3.0",
     "next": "13.3.0",
     "postcss": "8.4.23",
+    "pusher": "^5.1.3",
+    "pusher-js": "^8.0.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-feather": "^2.0.10",
